--- a/css/style.css
+++ b/css/style.css
@@ -963,7 +963,6 @@ nav ul li.active::after
 .block-reviews{
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr;
 	grid-row-gap: 60px;
 	margin-top: 40px;
 }
@@ -1333,6 +1332,14 @@ form.subscribe .input::placeholder {
 	    margin-bottom: 45px;
 	}
 
+	/*block-reviews*/
+	.block-reviews{
+		grid-template-columns: 1fr;
+		max-width: 700px;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
+
 }
 
 @media (max-width: 770px){
@@ -1464,6 +1471,18 @@ form.subscribe .input::placeholder {
     	font-size: 18px;
     }
 
+    /*people-say*/
+    .people-say {
+	    padding-top: 60px;
+	    padding-bottom: 60px;
+	}
+
+	/*block-reviews*/
+	.block-reviews {
+	    grid-row-gap: 40px;
+	    margin-top: 0;
+	}
+
 }
 
 @media (max-width: 575px){
@@ -1589,7 +1608,7 @@ form.subscribe .input::placeholder {
 	.reviews {
 	    height: 400px;
 	}
-	
+
 	/*slider-reviews*/
 	.slider-reviews {
 	    padding: 0 40px;
@@ -1614,5 +1633,15 @@ form.subscribe .input::placeholder {
 	.slider-reviews figure figcaption cite {
 	    font-size: 14px;
 	}
+
+	/*block-reviews*/
+	.block-reviews .reviews-item {
+	    padding-left: 0;
+	    padding-right: 0;
+    }
+	.block-reviews .reviews-item .img-wrap {
+		position: static;
+	}
+
 }
 
