--- a/css/style.css
+++ b/css/style.css
@@ -132,46 +132,91 @@ header{
     padding-top: 29px;
     z-index: 9999;
 }
+header.header-fixed{
+	position: fixed;
+	background: #f38181;
+	padding-top: 0;
+	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
+}
 header .container{
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 header .logo{
 	font-size: 30px;
 	font-weight: 700;
 	color: #fff;
-	margin-right: auto;
 }
-header .user-buttons{
-	margin-left: 50px;
-	width: 76px;
+header .nav-toggle{
+	width: 30px;
+	height: 20px;
 	display: flex;
-	justify-content: space-between;
+	display: none;
 }
-header .user-buttons button{
+header .nav-toggle div{
+	width: 100%;
+	height: 2px;
+	margin: auto;
+	background-color: #fff;
+	position: relative;
 	font-size: 0;
-	width: 18px;
-	height: 18px;
 }
-header .user-buttons .shopping{
-	background: url("../img/header/cart.svg") center no-repeat;
+header .nav-toggle div:before,
+header .nav-toggle div:after{
+	content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	right: 0;
+	height: 2px;
+	background-color: #fff;
+	transition: transform .2s linear;
 }
-header .user-buttons .search{
-	background: url("../img/header/search.svg") center no-repeat;
+header .nav-toggle div:before{top: -8px;}
+header .nav-toggle div:after{bottom: -8px;}
+header .nav-toggle.active div{
+	background-color: transparent;
 }
-
+header .nav-toggle.active div:before{
+	top: 0;
+	transform: rotate(45deg);
+}
+header .nav-toggle.active div:after{
+	bottom: 0;
+	transform: rotate(-45deg);
+}
+header .nav-toggle.active + nav{
+	display: block;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 48px;
+	background-color: #f38181;
+	margin: 0;
+	padding: 20px 30px;
+	flex-direction: column;
+}
+header .nav-toggle.active + nav ul{
+	flex-direction: column;
+}
+header .nav-toggle.active + nav .user-buttons{
+	margin: 10px 0;
+}
 
 
 /*nav*/
 nav{
 	text-transform: uppercase;
-	font-size: 14px;
-	width: 494px;	
+	font-size: 14px;	
 	margin-left: 40px;
+	display: flex;
+	flex-basis: 600px;
 }
 nav ul{
 	display: flex;
 	justify-content: space-between;
+	flex-grow: 1;
 }
 nav ul li{
 	position: relative;
@@ -202,6 +247,25 @@ nav ul li.active::after
 	opacity: 1;
 	background-color: #fce38a;
 }
+nav .user-buttons{
+	margin-left: 50px;
+	width: 76px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+nav .user-buttons button{
+	font-size: 0;
+	width: 18px;
+	height: 18px;
+}
+nav .user-buttons .shopping{
+	background: url("../img/header/cart.svg") center no-repeat;
+}
+nav .user-buttons .search{
+	background: url("../img/header/search.svg") center no-repeat;
+}
+
 
 
 
@@ -1375,8 +1439,8 @@ form.subscribe .input::placeholder {
 
 @media (max-width: 770px){
 	
-	/*header*/
-	header .user-buttons {
+	/*nav*/
+	nav .user-buttons {
 	    margin-left: 25px;
 	}
 
@@ -1569,7 +1633,16 @@ form.subscribe .input::placeholder {
 	}
 
 	/*header*/
-	nav, header .user-buttons{
+	header{
+		padding-top: 0;
+		background-color: #f38181;
+	}
+	header .nav-toggle{
+		display: block;
+	}
+
+	/*nav*/
+	nav{
 		display: none;
 	}
 
