--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,15 @@ input:focus, input:active{
 
 
 /*general*/
-
+html{
+	scroll-behavior: smooth;
+}
 body{
 	margin: 0;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 15px;
 	color: #333;
 	line-height: 1.6;
-	scroll-behavior: smooth;
 }
 input, button{
 	font-family: 'Montserrat', sans-serif;
@@ -132,10 +133,10 @@ header{
     padding-top: 29px;
     z-index: 9999;
 }
-header.header-fixed{
+header.fixed{
 	position: fixed;
 	background: #f38181;
-	padding-top: 0;
+	padding: 5px 0;
 	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
 }
 header .container{
@@ -192,13 +193,21 @@ header .nav-toggle.active + nav{
 	left: 0;
 	right: 0;
 	top: 48px;
-	background-color: #f38181;
+	background-color: #ed8080;	
 	margin: 0;
 	padding: 20px 30px;
 	flex-direction: column;
+	opacity: 0.9;
+}
+header.fixed .nav-toggle.active + nav{
+	opacity: 1;
+	background-color: #f38181;
 }
 header .nav-toggle.active + nav ul{
 	flex-direction: column;
+}
+header .nav-toggle.active + nav ul li{
+	padding: 4px 0;
 }
 header .nav-toggle.active + nav .user-buttons{
 	margin: 10px 0;
@@ -623,7 +632,7 @@ nav .user-buttons .search{
  	background: url("../img/whatwedo/target.svg") center no-repeat;
 }
 .accordion dt.active + dd{
-	max-height: 180px;
+	height: 180px;
 	padding: 20px 25px 20px 20px;
 	border: 1px solid #ddd;
 	border-top: none;
@@ -634,12 +643,13 @@ nav .user-buttons .search{
 	font-style: italic;	
 	border: none;
 	margin-bottom: 10px;
-	max-height: 0;
+	height: 0;
 	padding: 0;	
 	color: #999;
 	position: relative;
 	scrollbar-width: thin;
 	overflow: hidden;
+	transition: height .2s linear;
 }
 .accordion dd p{
 	overflow-y: auto;
@@ -647,15 +657,15 @@ nav .user-buttons .search{
 	padding-right: 20px;
 }
 .accordion dd p::-webkit-scrollbar {
-  width: 5px;
+	width: 5px;
 }
 .accordion dd p::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
-  border-radius: 25px;
+	background-color: #f5f5f5;
+	border-radius: 25px;
 }
 .accordion dd p::-webkit-scrollbar-thumb {
-  background-color: #95e1d3;
-  border-radius: 25px;
+	background-color: #95e1d3;
+	border-radius: 25px;
 }
 
 
@@ -1341,6 +1351,11 @@ form.subscribe .input::placeholder {
 
 
 @media (max-width: 1230px){
+
+	/*header*/
+	header{
+		padding-top: 5px;		
+	}
 	
 	/*intro*/
 	.intro .overhead{
@@ -1358,6 +1373,7 @@ form.subscribe .input::placeholder {
 }
 
 @media (max-width: 990px){
+
 	
 	/*intro*/	
 	.intro .overhead{
@@ -1634,7 +1650,10 @@ form.subscribe .input::placeholder {
 
 	/*header*/
 	header{
-		padding-top: 0;
+		padding: 0;		
+	}
+	header.fixed{
+		padding: 0;	
 		background-color: #f38181;
 	}
 	header .nav-toggle{
