--- a/css/style.css
+++ b/css/style.css
@@ -633,18 +633,20 @@ nav .user-buttons .search{
 }
 .accordion dt.active + dd{
 	height: 180px;
-	padding: 20px 25px 20px 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	border: 1px solid #ddd;
 	border-top: none;
 }
 .accordion dd{
 	margin: 0;
+	padding-left: 20px;
+	padding-right: 20px;
 	font-weight: 300;
 	font-style: italic;	
 	border: none;
 	margin-bottom: 10px;
 	height: 0;
-	padding: 0;	
 	color: #999;
 	position: relative;
 	scrollbar-width: thin;
@@ -692,11 +694,7 @@ nav .user-buttons .search{
 	align-items: center;
 	position: relative;
 }
-/*стрелки*/
-.slider-quotes::before, 
-.slider-quotes::after{
-	content: "";
-	display: block;
+.slider-quotes .slick-arrow{
 	position: absolute;
 	width: 12px;
 	height: 12px;
@@ -705,17 +703,20 @@ nav .user-buttons .search{
 	cursor: pointer;
 	top: 50%;
 	transform: translateY(-50px);
+	font-size: 0;
 }
-.slider-quotes::before{	
+.slider-quotes .slick-prev{	
 	transform: rotate(-135deg);
 	left: 20px;	
 }
-.slider-quotes::after{
+.slider-quotes .slick-next{
 	transform: rotate(45deg);
 	right: 20px;
 }
 .slider-quotes figure{
 	margin-left: 240px;
+	position: relative;
+	min-height: 150px;
 }
 .slider-quotes figure::before{
 	content: "";
@@ -727,7 +728,7 @@ nav .user-buttons .search{
 	position: absolute;
 	top: 50%;
     transform: translateY(-50%);
-	left: 112px;
+	left: -200px;
 }
 .slider-quotes figure blockquote{
 	font-style: italic;
@@ -959,11 +960,7 @@ nav .user-buttons .search{
 	align-items: center;
 	position: relative;
 }
-/*стрелки*/
-.slider-reviews::before, 
-.slider-reviews::after{
-	content: "";
-	display: block;
+.slider-reviews .slick-arrow{
 	position: absolute;
 	width: 12px;
 	height: 12px;
@@ -972,24 +969,30 @@ nav .user-buttons .search{
 	cursor: pointer;
 	top: 50%;
 	transform: translateY(-50px);
+	font-size: 0;
 }
-.slider-reviews::before{	
+.slider-reviews .slick-prev{	
 	transform: rotate(-135deg);
 	left: 20px;	
 }
-.slider-reviews::after{
+.slider-reviews .slick-next{
 	transform: rotate(45deg);
 	right: 20px;
 }
 .slider-reviews figure{
 	margin-left: 240px;
+	position: relative;
+	min-height: 210px;
+	display: flex !important;
+	flex-direction: column;
+	justify-content: center;
 }
 .slider-reviews figure .img-wrap{
 	width: 210px;
 	height: 210px;
 	position: absolute;
 	top: 50%;
-	left: 80px;
+	left: -240px;
 	transform: translateY(-50%);
 	overflow: hidden;
 	border-radius: 50%;
@@ -1530,7 +1533,7 @@ form.subscribe .input::placeholder {
 	.slider-quotes figure::before {
 	    width: 75px;
 	    height: 75px;
-	    left: 80px;
+	    left: -100px;
 	}
 	.slider-quotes figure blockquote{
 		font-size: 13px;
@@ -1582,6 +1585,7 @@ form.subscribe .input::placeholder {
     .slider-reviews figure .img-wrap {
 	    width: 100px;
 	    height: 100px;
+	    left: -120px;
 	}
 	.slider-reviews figure .img-wrap img{
 		width: 100%;
